// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"size":{"base":"x-small","xs":"small","s":"medium","m":"large","l":"x-large","xl":"inherit"},"weight":"semibold","hideLabel":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"alignLabel":{"base":"left","xs":"right","s":"left","m":"right","l":"left","xl":"right"},"hasSubline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  position: relative;
  outline: 0 !important;
  display: block;
}
::slotted(a) {
  display: block;
  position: static;
  text-decoration: none;
  font: inherit;
  color: inherit;
  outline: 0;
}
::slotted(a)::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
::slotted(a:focus)::before {
  outline-color: currentColor;
}
::slotted(a:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
slot[name=subline]::slotted(*) {
  margin: 0;
}
@media(min-width:480px) {
  :host {
    display: inline-block;
    vertical-align: top;
  }
}

@media(min-width:760px) {
  :host {
    display: block;
  }
}

@media(min-width:1000px) {
  :host {
    display: inline-block;
    vertical-align: top;
  }
}

@media(min-width:1300px) {
  :host {
    display: block;
  }
}

@media(min-width:1760px) {
  :host {
    display: inline-block;
    vertical-align: top;
  }
}

.root {
  display: flex;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: 0;
  appearance: none;
  cursor: pointer;
  text-decoration: none;
  text-align: left;
  border: none;
  background: transparent;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  justify-content: space-between;
  font-size: 0.75rem;
}
.root::-moz-focus-inner {
  border: 0;
}
.root::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root:focus::before {
  outline-color: currentColor;
}
.root:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
.root:active {
  color: #d5001c;
}
.root ~ .subline {
  font-size: 0.75rem;
  line-height: calc(6px + 2.125ex);
}
.root ~ .subline::before {
  font-size: 0.75rem;
  margin-left: calc(6px + 2.125ex);
}
.icon {
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0.25rem 0 0;
  order: -1;
}
@media(min-width:480px) {
  .root {
    justify-content: flex-start;
    font-size: 1rem;
  }
  .root ~ .subline {
    font-size: 1rem;
    line-height: calc(6px + 2.125ex);
  }
  .root ~ .subline::before {
    font-size: 1rem;
    margin-left: calc(6px + 2.125ex);
  }
  .label {
    position: static;
    width: auto;
    height: auto;
    border: medium none color;
    margin: 0;
    white-space: inherit;
    overflow: visible;
    clip: auto;
    clip-path: none;
    padding: 0 0 0 0.25rem;
    order: 0;
  }
}

@media(min-width:760px) {
  .root {
    justify-content: space-between;
    font-size: 1.5rem;
  }
  .root ~ .subline {
    font-size: 1.25rem;
    line-height: calc(6px + 2.125ex);
  }
  .root ~ .subline::before {
    font-size: 1.5rem;
    margin-left: calc(6px + 2.125ex);
  }
  .label {
    position: absolute;
    height: 1px;
    width: 1px;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
    padding: 0 0.25rem 0 0;
    order: -1;
  }
}

@media(min-width:1000px) {
  .root {
    justify-content: flex-start;
    font-size: 2.25rem;
  }
  .root ~ .subline {
    font-size: 1.875rem;
    line-height: calc(6px + 2.125ex);
  }
  .root ~ .subline::before {
    font-size: 2.25rem;
    margin-left: calc(6px + 2.125ex);
  }
  .label {
    position: static;
    width: auto;
    height: auto;
    border: medium none color;
    margin: 0;
    white-space: inherit;
    overflow: visible;
    clip: auto;
    clip-path: none;
    padding: 0 0 0 0.25rem;
    order: 0;
  }
}

@media(min-width:1300px) {
  .root {
    justify-content: space-between;
    font-size: 3.25rem;
  }
  .root ~ .subline {
    font-size: 2.25rem;
    line-height: calc(6px + 2.125ex);
  }
  .root ~ .subline::before {
    font-size: 3.25rem;
    margin-left: calc(6px + 2.125ex);
  }
  .label {
    position: absolute;
    height: 1px;
    width: 1px;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
    padding: 0 0.25rem 0 0;
    order: -1;
  }
}

@media(min-width:1760px) {
  .root {
    justify-content: flex-start;
    font-size: inherit;
  }
  .label {
    position: static;
    width: auto;
    height: auto;
    border: medium none color;
    margin: 0;
    white-space: inherit;
    overflow: visible;
    clip: auto;
    clip-path: none;
    padding: 0 0 0 0.25rem;
    order: 0;
  }
}

@media(hover:hover) {
  .root:hover {
    color: #d5001c;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","weight":"regular","hideLabel":false,"alignLabel":"right","hasSubline":false,"hasSlottedAnchor":false,"theme":"dark"} 1`] = `
":host {
  position: relative;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
::slotted(a) {
  display: block;
  position: static;
  text-decoration: none;
  font: inherit;
  color: inherit;
  outline: 0;
}
::slotted(a)::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
::slotted(a:focus)::before {
  outline-color: currentColor;
}
::slotted(a:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
slot[name=subline]::slotted(*) {
  margin: 0;
}
.root {
  display: flex;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: 0;
  appearance: none;
  cursor: pointer;
  text-decoration: none;
  text-align: left;
  border: none;
  background: transparent;
  color: #fff;
  transition: color var(--p-transition-duration, .24s) ease;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  justify-content: flex-start;
  font-size: 1rem;
}
.root::-moz-focus-inner {
  border: 0;
}
.root::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root:focus::before {
  outline-color: currentColor;
}
.root:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
.root:active {
  color: #ff0223;
}
.root ~ .subline {
  font-size: 1rem;
  line-height: calc(6px + 2.125ex);
}
.root ~ .subline::before {
  font-size: 1rem;
  margin-left: calc(6px + 2.125ex);
}
.icon {
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  position: static;
  width: auto;
  height: auto;
  border: medium none color;
  margin: 0;
  white-space: inherit;
  overflow: visible;
  clip: auto;
  clip-path: none;
  padding: 0 0 0 0.25rem;
  order: 0;
}
@media(hover:hover) {
  .root:hover {
    color: #ff0223;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","weight":"regular","hideLabel":true,"alignLabel":"right","hasSubline":false,"hasSlottedAnchor":true,"theme":"light"} 1`] = `
":host {
  position: relative;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
::slotted(a) {
  display: block;
  position: static;
  text-decoration: none;
  font: inherit;
  color: inherit;
  outline: 0;
}
::slotted(a)::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
::slotted(a:focus)::before {
  outline-color: currentColor;
}
::slotted(a:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
slot[name=subline]::slotted(*) {
  margin: 0;
}
.root {
  display: flex;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: transparent none;
  appearance: none;
  cursor: pointer;
  text-decoration: none;
  text-align: left;
  border: none;
  background: transparent;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  justify-content: flex-start;
  font-size: 1rem;
}
.root:active {
  color: #d5001c;
}
.root ~ .subline {
  font-size: 1rem;
  line-height: calc(6px + 2.125ex);
}
.root ~ .subline::before {
  font-size: 1rem;
  margin-left: calc(6px + 2.125ex);
}
.icon {
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  padding: 0 0 0 0.25rem;
  order: 0;
}
@media(hover:hover) {
  .root:hover {
    color: #d5001c;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","weight":"regular","hideLabel":true,"alignLabel":"right","hasSubline":true,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  position: relative;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
::slotted(a) {
  display: block;
  position: static;
  text-decoration: none;
  font: inherit;
  color: inherit;
  outline: 0;
}
::slotted(a)::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
::slotted(a:focus)::before {
  outline-color: currentColor;
}
::slotted(a:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
slot[name=subline]::slotted(*) {
  margin: 0;
}
.root {
  display: flex;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: 0;
  appearance: none;
  cursor: pointer;
  text-decoration: none;
  text-align: left;
  border: none;
  background: transparent;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1rem;
}
.root::-moz-focus-inner {
  border: 0;
}
.root::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root:focus::before {
  outline-color: currentColor;
}
.root:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
.root:active {
  color: #d5001c;
}
.root ~ .subline {
  font-size: 1rem;
  line-height: calc(6px + 2.125ex);
}
.root ~ .subline::before {
  font-size: 1rem;
  margin-left: calc(6px + 2.125ex);
}
.root:active + .subline {
  color: #d5001c;
}
.icon {
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding-left: 0.25rem;
}
.subline {
  display: flex;
  margin-top: 4px !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding-left: 0.25rem;
}
.subline::before {
  content: "";
}
@media(hover:hover) {
  .root:hover {
    color: #d5001c;
  }
  .root:hover + .subline {
    color: #d5001c;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","weight":"semibold","hideLabel":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"alignLabel":"right","hasSubline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  position: relative;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
::slotted(a) {
  display: block;
  position: static;
  text-decoration: none;
  font: inherit;
  color: inherit;
  outline: 0;
}
::slotted(a)::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
::slotted(a:focus)::before {
  outline-color: currentColor;
}
::slotted(a:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
slot[name=subline]::slotted(*) {
  margin: 0;
}
.root {
  display: flex;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: 0;
  appearance: none;
  cursor: pointer;
  text-decoration: none;
  text-align: left;
  border: none;
  background: transparent;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  justify-content: flex-start;
  font-size: 1rem;
}
.root::-moz-focus-inner {
  border: 0;
}
.root::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root:focus::before {
  outline-color: currentColor;
}
.root:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
.root:active {
  color: #d5001c;
}
.root ~ .subline {
  font-size: 1rem;
  line-height: calc(6px + 2.125ex);
}
.root ~ .subline::before {
  font-size: 1rem;
  margin-left: calc(6px + 2.125ex);
}
.icon {
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0 0.25rem;
  order: 0;
}
@media(min-width:480px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    border: medium none color;
    margin: 0;
    white-space: inherit;
    overflow: visible;
    clip: auto;
    clip-path: none;
  }
}

@media(min-width:760px) {
  .label {
    position: absolute;
    height: 1px;
    width: 1px;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    border: medium none color;
    margin: 0;
    white-space: inherit;
    overflow: visible;
    clip: auto;
    clip-path: none;
  }
}

@media(min-width:1300px) {
  .label {
    position: absolute;
    height: 1px;
    width: 1px;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    border: medium none color;
    margin: 0;
    white-space: inherit;
    overflow: visible;
    clip: auto;
    clip-path: none;
  }
}

@media(hover:hover) {
  .root:hover {
    color: #d5001c;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","weight":"thin","hideLabel":false,"alignLabel":"right","hasSubline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  position: relative;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
::slotted(a) {
  display: block;
  position: static;
  text-decoration: none;
  font: inherit;
  color: inherit;
  outline: 0;
}
::slotted(a)::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
::slotted(a:focus)::before {
  outline-color: currentColor;
}
::slotted(a:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
slot[name=subline]::slotted(*) {
  margin: 0;
}
.root {
  display: flex;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: 0;
  appearance: none;
  cursor: pointer;
  text-decoration: none;
  text-align: left;
  border: none;
  background: transparent;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 100;
  justify-content: flex-start;
  font-size: 1rem;
}
.root::-moz-focus-inner {
  border: 0;
}
.root::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root:focus::before {
  outline-color: currentColor;
}
.root:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
.root:active {
  color: #d5001c;
}
.root ~ .subline {
  font-size: 1rem;
  line-height: calc(6px + 2.125ex);
}
.root ~ .subline::before {
  font-size: 1rem;
  margin-left: calc(6px + 2.125ex);
}
.icon {
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  position: static;
  width: auto;
  height: auto;
  border: medium none color;
  margin: 0;
  white-space: inherit;
  overflow: visible;
  clip: auto;
  clip-path: none;
  padding: 0 0 0 0.25rem;
  order: 0;
}
@media(hover:hover) {
  .root:hover {
    color: #d5001c;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","weight":"thin","hideLabel":false,"alignLabel":"right","hasSubline":false,"hasSlottedAnchor":true,"theme":"light"} 1`] = `
":host {
  position: relative;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
::slotted(a) {
  display: block;
  position: static;
  text-decoration: none;
  font: inherit;
  color: inherit;
  outline: 0;
}
::slotted(a)::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
::slotted(a:focus)::before {
  outline-color: currentColor;
}
::slotted(a:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
slot[name=subline]::slotted(*) {
  margin: 0;
}
.root {
  display: flex;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: transparent none;
  appearance: none;
  cursor: pointer;
  text-decoration: none;
  text-align: left;
  border: none;
  background: transparent;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 100;
  justify-content: flex-start;
  font-size: 1rem;
}
.root:active {
  color: #d5001c;
}
.root ~ .subline {
  font-size: 1rem;
  line-height: calc(6px + 2.125ex);
}
.root ~ .subline::before {
  font-size: 1rem;
  margin-left: calc(6px + 2.125ex);
}
.icon {
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  position: static;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  padding: 0 0 0 0.25rem;
  order: 0;
}
@media(hover:hover) {
  .root:hover {
    color: #d5001c;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":false,"stretch":false,"size":"small","weight":"thin","hideLabel":true,"alignLabel":"right","hasSubline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  position: relative;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
::slotted(a) {
  display: block;
  position: static;
  text-decoration: none;
  font: inherit;
  color: inherit;
  outline: 0;
}
::slotted(a)::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
::slotted(a:focus)::before {
  outline-color: currentColor;
}
::slotted(a:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
slot[name=subline]::slotted(*) {
  margin: 0;
}
.root {
  display: flex;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: 0;
  appearance: none;
  cursor: pointer;
  text-decoration: none;
  text-align: left;
  border: none;
  background: transparent;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 100;
  justify-content: flex-start;
  font-size: 1rem;
}
.root::-moz-focus-inner {
  border: 0;
}
.root::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root:focus::before {
  outline-color: currentColor;
}
.root:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
.root:active {
  color: #d5001c;
}
.root ~ .subline {
  font-size: 1rem;
  line-height: calc(6px + 2.125ex);
}
.root ~ .subline::before {
  font-size: 1rem;
  margin-left: calc(6px + 2.125ex);
}
.icon {
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0 0.25rem;
  order: 0;
}
@media(hover:hover) {
  .root:hover {
    color: #d5001c;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":true,"stretch":true,"size":"x-large","weight":"bold","hideLabel":false,"alignLabel":"left","hasSubline":false,"hasSlottedAnchor":false,"theme":"dark"} 1`] = `
":host {
  position: relative;
  outline: 0 !important;
  display: block;
}
::slotted(a) {
  display: block;
  position: static;
  text-decoration: none;
  font: inherit;
  color: inherit;
  outline: 0;
}
::slotted(a)::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
::slotted(a:focus)::before {
  outline-color: currentColor;
}
::slotted(a:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
slot[name=subline]::slotted(*) {
  margin: 0;
}
.root {
  display: flex;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: 0;
  appearance: none;
  cursor: pointer;
  text-decoration: none;
  text-align: left;
  border: none;
  background: transparent;
  color: #ff0223;
  transition: color var(--p-transition-duration, .24s) ease;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 700;
  justify-content: space-between;
  font-size: 3.25rem;
}
.root::-moz-focus-inner {
  border: 0;
}
.root::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root:focus::before {
  outline-color: currentColor;
}
.root:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
.root:active {
  color: #ff0223;
}
.root ~ .subline {
  font-size: 2.25rem;
  line-height: calc(6px + 2.125ex);
}
.root ~ .subline::before {
  font-size: 3.25rem;
  margin-left: calc(6px + 2.125ex);
}
.icon {
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  position: static;
  width: auto;
  height: auto;
  border: medium none color;
  margin: 0;
  white-space: inherit;
  overflow: visible;
  clip: auto;
  clip-path: none;
  padding: 0 0.25rem 0 0;
  order: -1;
}
@media(hover:hover) {
  .root:hover {
    color: #ff0223;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","active":true,"stretch":true,"size":"x-large","weight":"semibold","hideLabel":false,"alignLabel":"left","hasSubline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  position: relative;
  outline: 0 !important;
  display: block;
}
::slotted(a) {
  display: block;
  position: static;
  text-decoration: none;
  font: inherit;
  color: inherit;
  outline: 0;
}
::slotted(a)::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
::slotted(a:focus)::before {
  outline-color: currentColor;
}
::slotted(a:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
slot[name=subline]::slotted(*) {
  margin: 0;
}
.root {
  display: flex;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: 0;
  appearance: none;
  cursor: pointer;
  text-decoration: none;
  text-align: left;
  border: none;
  background: transparent;
  color: #d5001c;
  transition: color var(--p-transition-duration, .24s) ease;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  justify-content: space-between;
  font-size: 3.25rem;
}
.root::-moz-focus-inner {
  border: 0;
}
.root::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root:focus::before {
  outline-color: currentColor;
}
.root:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
.root:active {
  color: #d5001c;
}
.root ~ .subline {
  font-size: 2.25rem;
  line-height: calc(6px + 2.125ex);
}
.root ~ .subline::before {
  font-size: 3.25rem;
  margin-left: calc(6px + 2.125ex);
}
.icon {
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  position: static;
  width: auto;
  height: auto;
  border: medium none color;
  margin: 0;
  white-space: inherit;
  overflow: visible;
  clip: auto;
  clip-path: none;
  padding: 0 0.25rem 0 0;
  order: -1;
}
@media(hover:hover) {
  .root:hover {
    color: #d5001c;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"none","active":false,"stretch":false,"size":"inherit","weight":"regular","hideLabel":false,"alignLabel":"right","hasSubline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  position: relative;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
::slotted(a) {
  display: block;
  position: static;
  text-decoration: none;
  font: inherit;
  color: inherit;
  outline: 0;
}
::slotted(a)::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
::slotted(a:focus)::before {
  outline-color: currentColor;
}
::slotted(a:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
slot[name=subline]::slotted(*) {
  margin: 0;
}
.root {
  display: flex;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: 0;
  appearance: none;
  cursor: pointer;
  text-decoration: none;
  text-align: left;
  border: none;
  background: transparent;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  justify-content: flex-start;
  font-size: inherit;
}
.root::-moz-focus-inner {
  border: 0;
}
.root::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root:focus::before {
  outline-color: currentColor;
}
.root:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
.root:active {
  color: #d5001c;
}
@media(hover:hover) {
  .root:hover {
    color: #d5001c;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"none","active":false,"stretch":false,"size":"small","weight":"bold","hideLabel":false,"alignLabel":"right","hasSubline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  position: relative;
  outline: 0 !important;
  display: inline-block;
  vertical-align: top;
}
::slotted(a) {
  display: block;
  position: static;
  text-decoration: none;
  font: inherit;
  color: inherit;
  outline: 0;
}
::slotted(a)::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
::slotted(a:focus)::before {
  outline-color: currentColor;
}
::slotted(a:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
slot[name=subline]::slotted(*) {
  margin: 0;
}
.root {
  display: flex;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: 0;
  appearance: none;
  cursor: pointer;
  text-decoration: none;
  text-align: left;
  border: none;
  background: transparent;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 700;
  justify-content: flex-start;
  font-size: 1rem;
}
.root::-moz-focus-inner {
  border: 0;
}
.root::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root:focus::before {
  outline-color: currentColor;
}
.root:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
.root:active {
  color: #d5001c;
}
.root ~ .subline {
  font-size: 1rem;
  line-height: calc(6px + 2.125ex);
}
.root ~ .subline::before {
  font-size: 1rem;
  margin-left: calc(6px + 2.125ex);
}
@media(hover:hover) {
  .root:hover {
    color: #d5001c;
  }
}
"
`;
